Infra-TF/deploy/network.tf
##############################
### Network infrastructure ###
##############################
resource "aws_vpc" "mainVPC" {
  cidr_block           = "10.1.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
}

#########################################################
## Internet Gateway needed to inbound acces to the ALB ##
#########################################################

resource "aws_internet_gateway" "mainGatew" {
  vpc_id = aws_vpc.mainVPC.id
  tags = {
    name = "${local.prefix}-main"
  }

}
########################################################
#### public subnets for load balancer public access ####
########################################################

resource "aws_subnet" "public_a" {
  vpc_id = aws_vpc.mainVPC
  cidr_block = "10.1.1.0/24"
  map_public_ip_on_launch = true
  availability_zone = "${data.aws_region.current.name}a"

  tags = {
    name = "${local.prefix}-public-a"
  }
}

resource "aws_route_table" "public_a" {
  vpc_id = aws_vpc.mainVPC.id

  tags = {
    Name = "${local.prefix}-public-a"
  }
  
}

resource "aws_route_table_association" "public_a" {
  subnet_id = aws_subnet.public_a.id
  route_table_id = aws_route_table.public_a.id
  
}

resource "aws_route" "public_internet_access_a" {
  route_table_id = aws_route_table.public_a.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.mainGatew.id
}

#########################################################
#### Copy paste privious section for public access b ####
#########################################################
resource "aws_subnet" "public_b" {
  vpc_id = aws_vpc.mainVPC
  cidr_block = "10.1.2.0/24"
  map_public_ip_on_launch = true
  availability_zone = "${data.aws_region.current.name}b"

  tags = {
    name = "${local.prefix}-public-b"
  }
}

resource "aws_route_table" "public_b" {
  vpc_id = aws_vpc.mainVPC.id

  tags = {
    Name = "${local.prefix}-public-b"
  }
  
}

resource "aws_route_table_association" "public_b" {
  subnet_id = aws_subnet.public_b.id
  route_table_id = aws_route_table.public_b.id
  
}

resource "aws_route" "public_internet_access_b" {
  route_table_id = aws_route_table.public_b.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.mainGatew.id
}
